fix: removed the gap before the main banner

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,6 @@ body {
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   transition: ease-in-out;
-  margin-top: 60px;
 }
 
 .navbar {
